fix layout issues with media track info in player

--- a/src/components/media-cover-picture/media-cover-picture.component.css
+++ b/src/components/media-cover-picture/media-cover-picture.component.css
@@ -1,15 +1,20 @@
 .media-cover-picture {
-  position: relative;
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  aspect-ratio: 1 / 1;
+  position: relative;
+  overflow: hidden;
   box-shadow: 0 8px 24px rgb(0 0 0 / 50%);
 }
 
 .media-cover-picture > img {
   width: 100%;
+  height: 100%;
+  object-fit: cover; /* CRITICAL */
+  display: block;
 }
 
 /*a trick learned from https://mademyday.de/height-equals-width-with-pure-css*/
