--- a/src/components/media-track-info/media-track-info.component.css
+++ b/src/components/media-track-info/media-track-info.component.css
@@ -6,6 +6,7 @@
   padding: var(--selectable-focus-ring-size); /* this is to not clip focus ring */
   gap: 5px;
   min-width: 0;
+  flex-grow: 1;
 }
 
 .media-track-info-title,
